updated link to demo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <p class="card-text">Flutter Flame audio demo. Long load times.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button onclick="window.location.href='/audio-demo.html'" type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button onclick="window.location.href='audio-demo.html'" type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button onclick="window.location.href='https://github.com/codetricity/flame_audio_tutorial'" type="button" class="btn btn-sm btn-outline-secondary">Code</button>
                 </div>
                 <small class="text-muted">Flutter, game development</small>
